Create initial sections

--- a/_sass/navbar.sass
+++ b/_sass/navbar.sass
@@ -32,6 +32,7 @@ nav
           &:last-child
             padding-right: 0
           a
+            text-transform: uppercase
             color: #4A4A4A
             padding: 0
             &:hover
